--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   
   <body id="index" onload="">
     
-    These are the Wylde Ventures.
+    These are the Wylde Ventures. 2
     
   </body>
   
