fixing profile path

--- a/chronicles/index.html
+++ b/chronicles/index.html
@@ -79,7 +79,7 @@
 				</div>
 				
         <div class="col-sm-3 blog-main">
-					<img class="profile-pic" src="../img/profile.png" />
+					<img class="profile-pic" src="img/profile.png" />
 				</div>
 			</div>
 			
