fixing base paths

--- a/chronicles/index.html
+++ b/chronicles/index.html
@@ -40,7 +40,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button> -->
-          <a class="navbar-brand" href="/">
+          <a class="navbar-brand" href="/chronicles/">
 						The Wylde Chronicles
 						<!-- <img width="200px" src="../img/feet-slim.png" /> -->
 					</a>
@@ -112,7 +112,7 @@
 													December 10th, 2014
 												</span>
 												<span class="post-link-block">
-							            <a href="/anake/thank-you-for-this-moment.html">
+							            <a href="/chronicles/anake/thank-you-for-this-moment.html">
 														<i class="fa fa-file"></i>
 							                Thank You For This Moment
 							            </a>
@@ -130,7 +130,7 @@
 													November 19th, 2014
 												</span>
 												<span class="post-link-block">
-							            <a href="/anake/the-babbling-brook.html">
+							            <a href="/chronicles/anake/the-babbling-brook.html">
 														<i class="fa fa-file"></i>
 							                The Babbling Brook
 							            </a>
@@ -148,7 +148,7 @@
 													October 29th, 2014
 												</span>
 												<span class="post-link-block">
-							            <a href="/anake/dirt-medicine.html">
+							            <a href="/chronicles/anake/dirt-medicine.html">
 														<i class="fa fa-file"></i>
 							                Dirt Medicine
 							            </a>
@@ -166,7 +166,7 @@
 													October 24th, 2014
 												</span>
 												<span class="post-link-block">
-							            <a href="/anake/rocketships-are-rad.html">
+							            <a href="/chronicles/anake/rocketships-are-rad.html">
 														<i class="fa fa-file"></i>
 							                Rocketships are Rad
 							            </a>
@@ -197,7 +197,7 @@
 													July 16th, 2011
 												</span>
 												<span class="post-link-block">
-							            <a href="/nomad/poop-fire-and-land.html">
+							            <a href="/chronicles/nomad/poop-fire-and-land.html">
 														<i class="fa fa-file"></i>
 							                Poop, Fire, and Land
 							            </a>
@@ -215,7 +215,7 @@
 													September 26th, 2010
 												</span>
 												<span class="post-link-block">
-							            <a href="/nomad/glimpse.html">
+							            <a href="/chronicles/nomad/glimpse.html">
 														<i class="fa fa-file"></i>
 							                Glimpse
 							            </a>
