added reload link

--- a/active/smartwaiver/waiverstub/waiver_frame.html
+++ b/active/smartwaiver/waiverstub/waiver_frame.html
@@ -84,6 +84,7 @@
   <div style="margin: 20px auto; text-align: center;">
     <h1>Waiver Frame Stub</h1>
     <a id='photo-button' href='#' style='font-size: x-large;'>triger photo</a>
+		<a href="waiver_frame.html">start over</a>
     <div id='log'></div>
     <div id='photos'></div>
   </div>
